Included Title for Line Chart